# bsce-mgrep

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml
src/bsce_mgrep/: __init__.py  __main__.py
src/bsce_mgrep/adapters/input/: __init__.py  file_reader.py  stdin_reader.py
src/bsce_mgrep/adapters/output/: __init__.py  line_emitter.py
src/bsce_mgrep/cli/: parser.py  runner.py
src/bsce_mgrep/domain/: filter.py  matcher.py  pipeline.py  types.py  where_parser.py
src/bsce_mgrep/ports/: __init__.py  reader.py
src/bsce_mgrep/utils/: functional.py  railway.py
